# opencode-session-selector

./: .gitignore  README.md  pyproject.toml
src/oc_session/: __init__.py  cli.py  indexer.py  models.py  opener.py  utils.py
